--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               <i class="fa fa-handshake-o fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">Consultoria</h4>
-            <p class="text-muted">Consultoria em Engenharia de Minas na área de Direito Minerário e Licenciamento Ambiental. <br>CREA ES-010487/D <br>Acesso ao Currículo Lattes <br><a href="http://lattes.cnpq.br/4262709669453283">currículo lattes</a></p>
+            <p class="text-muted">Consultoria em Engenharia de Minas na área de Direito Minerário e Licenciamento Ambiental. <br>CREA ES-010487/D <br>Acesso ao Currículo Lattes <br><a href="http://lattes.cnpq.br/4262709669453283" target="_blank">currículo lattes</a></p>
           </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
@@ -94,7 +94,7 @@
               <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">Web Design</h4>
-            <p class="text-muted">Linux, Git, Html, CSS, Banco de dados, phpMyAdmin, conhecimento em PHP, linguagem c e Java. <Br>Página GitHub: <br><a href="https://github.com/flaviaemery">GitHub</a></p>
+            <p class="text-muted">Linux, Git, Html, CSS, Banco de dados, phpMyAdmin, conhecimento em PHP, linguagem c e Java. <Br>Página GitHub: <br><a href="https://github.com/flaviaemery" target="_blank">GitHub</a></p>
           </div>
         </div>
       </div>
@@ -346,7 +346,7 @@
         </div>
         <div class="row">
           <div class="col-lg-12 text-center">
-            <p class="large text-muted">Email: flaviaemery.consultoria@gmail.com / WhatsApp: (31) 97170-5150</p>
+            <p class="large text-muted">Email:<a href="flaviaemery.consultoria@gmail.com"> / WhatsApp: (31) 97170-5150</p>
           </div>
         </div>
       </div>
