--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
         </div>
         <div class="row">
           <div class="col-lg-12 text-center">
-            <p class="large text-muted">Email:<a href="flaviaemery.consultoria@gmail.com"> / WhatsApp: (31) 97170-5150</p>
+            <p class="large text-muted">Email:<a href="flaviaemery.consultoria@gmail.com">flaviaemery.consultoria@gmail.com</a> / WhatsApp: (31) 97170-5150</p>
           </div>
         </div>
       </div>
