novamente atualização do texto sobre

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
       <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Sobre</h2>
-            <h3 class="section-subheading text-muted">Engenheira de minas com crea do Espírito Santo, visto na Bahia e em Minas Gerais. Consultora na área de direito minerário e desenvolvedora front end.</h3>
+            <h3 class="section-subheading text-muted">Engenheira de minas, crea do Espírito Santo, visto na Bahia e em Minas Gerais. Consultora na área de direito minerário e desenvolvedora front end.</h3>
            </div>
         </div>
            <div class="row h-100 justify-content-center align-items-center">
