coloquei link externo nas redes sociais

--- a/index.html
+++ b/index.html
@@ -326,17 +326,17 @@
               <p class="text-muted">Engenheira / Consultora / Web designer</p>
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
-                  <a href="https://twitter.com/EmeryFlavia">
+                  <a href="https://twitter.com/EmeryFlavia" target="_blank">
                     <i class="fa fa-twitter"></i>
                   </a>
                 </li>
                 <li class="list-inline-item">
-                  <a href="https://www.facebook.com/flavia.emery.3">
+                  <a href="https://www.facebook.com/flavia.emery.3" target="_blank">
                     <i class="fa fa-facebook"></i>
                   </a>
                 </li>
                 <li class="list-inline-item">
-                  <a href="https://www.linkedin.com/in/fl%C3%A1via-emery-29ab09167/">
+                  <a href="https://www.linkedin.com/in/fl%C3%A1via-emery-29ab09167/" target="_blank">
                     <i class="fa fa-linkedin"></i>
                   </a>
                 </li>
