--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                     <h4 class="subheading">XXIII ENTMME</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Encontro Nacional de Tratamento de Minérios e Metalurgia Extrativa. Cominuição Seletiva de Misturas Binárias. (Congresso).</p>
+                    <p class="text-muted">Encontro Nacional de Tratamento de Minérios e Metalurgia Extrativa. Tema do trabalho: Cominuição Seletiva de Misturas Binárias. (Congresso).</p>
                   </div>
                 </div>
               </li>
