introdução da informação da ufmg matemática computacional e imagem

--- a/index.html
+++ b/index.html
@@ -282,6 +282,20 @@
             <ul class="timeline">
               <li>
                  <div class="timeline-image">
+                  <img class="rounded-circle img-fluid" src="img/ufmg.jpg" alt="">
+                </div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <h4>2017-2018</h4>
+                    <h4 class="subheading">Matemática Computacional - UFMG</h4>
+                  </div>
+                  <div class="timeline-body">
+                    <p class="text-muted">Graduação interrompida em Matemática Computacional.Universidade Federal de Minas Gerais,UFMG, Brasil. Ano de interrupção: 2019</p>
+                  </div>
+                </div>
+              </li>
+              <li class="timeline-inverted">
+                <div class="timeline-image">
                   <img class="rounded-circle img-fluid" src="img/11.jpg" alt="">
                 </div>
                 <div class="timeline-panel">
@@ -294,8 +308,8 @@
                   </div>
                 </div>
               </li>
-              <li class="timeline-inverted">
-                <div class="timeline-image">
+              <li>
+                 <div class="timeline-image">
                   <img class="rounded-circle img-fluid" src="img/iot.jpg" alt="">
                 </div>
                 <div class="timeline-panel">
