mudança de web design para desenvolvimento web

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               <a class="nav-link js-scroll-trigger" href="#consultoria">Consultoria</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#webdesign">Web Design</a>
+              <a class="nav-link js-scroll-trigger" href="#webdesign">Desenvolvimento Web</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#sobre">Sobre</a>
@@ -273,8 +273,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Web desing</h2>
-            <h3 class="section-subheading text-muted">Desenvolvedora Front End / Bolsista - IoT 4 Mining</h3>
+            <h2 class="section-heading text-uppercase">Desenvolvimento Web</h2>
+            <h3 class="section-subheading text-muted">Desenvolvimento em HTML-CSS / Bolsista - IoT 4 Mining</h3>
           </div>
         </div>
         <div class="row">
