mudança para desenvolvimento web

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
               <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
             </span>
-            <h4 class="service-heading">Web Design</h4>
+            <h4 class="service-heading">Desenvolvimento Web</h4>
             <p class="text-muted">Linux, Git, Html, CSS, Banco de dados, phpMyAdmin, conhecimento em PHP, linguagem c e Java. <Br>Página GitHub: <br><a href="https://github.com/flaviaemery" target="_blank">GitHub</a></p>
           </div>
         </div>
