--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Serviços</h2>
-            <h3 class="section-subheading text-muted">Engenheira de Minas, consultora e web designer</h3>
+            <h3 class="section-subheading text-muted">Engenheira de Minas, consultora e Desenvolvimento web</h3>
           </div>
         </div>
         <div class="row text-center">
