mais uma correção de web design para desenvolvimento web

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="img/flavia.jpg" alt="">
               <h4>Flávia Emery</h4>
-              <p class="text-muted">Engenheira / Consultora / Web designer</p>
+              <p class="text-muted">Engenheira / Consultora / Desenvolvimento Web</p>
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
                   <a href="https://twitter.com/EmeryFlavia" target="_blank">
