--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Desenvolvimento Web</h2>
-            <h3 class="section-subheading text-muted">Desenvolvimento em HTML - CSS / Bolsista - IoT 4 Mining</h3>
+            <h3 class="section-subheading text-muted">Desenvolvimento em HTML - CSS - Bootstrap / Bolsista - IoT 4 Mining</h3>
           </div>
         </div>
         <div class="row">
